--- a/monoChromia/monoChromia.csproj
+++ b/monoChromia/monoChromia.csproj
@@ -44,7 +44,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CursorDisp.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +53,8 @@
     <Compile Include="GameEngine.cs" />
     <Compile Include="GameObjects\AnchoredObject.cs" />
     <Compile Include="GameObjects\Block.cs" />
+    <Compile Include="GameObjects\GameCursor.cs" />
+    <Compile Include="GameObjects\WiggleMonster.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="GraphicsEngine.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
